<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HCI Clock</string>
    <string name="standard">12-hr\nMode</string>
    <string name="military">24-hr\nMode</string>
    <string name="basic">Basic\nClock</string>
    <string name="fancy">Fancy\nClock</string>
    <string name="back">Back to Clock</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_design_clock">DesignClock</string>
    <string name="title_activity_main_clock2">MainClock2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
